--- a/languages/post-meta-inspector.pot
+++ b/languages/post-meta-inspector.pot
@@ -4,42 +4,40 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Post Meta Inspector 0.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/post-meta-inspector\n"
-"POT-Creation-Date: 2012-10-05 18:12:33+00:00\n"
+"POT-Creation-Date: 2014-02-22 12:52+0200\n"
+"PO-Revision-Date: 2014-02-22 12:52+0200\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en_GB\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2012-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"X-Generator: Poedit 1.6.4\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Poedit-KeywordsList: _e;__\n"
+"X-Poedit-Basepath: .\n"
+"X-Poedit-SearchPath-0: ..\n"
 
-#. #-#-#-#-#  plugin.pot (Post Meta Inspector 0.0)  #-#-#-#-#
-#. Plugin Name of the plugin/theme
-#: post-meta-inspector.php:30
+#: ../post-meta-inspector.php:56
 msgid "Post Meta Inspector"
 msgstr ""
 
-#: post-meta-inspector.php:49
+#: ../post-meta-inspector.php:79
+msgid "Click to show&hellip;"
+msgstr ""
+
+#: ../post-meta-inspector.php:106
 msgid "Key"
 msgstr ""
 
-#: post-meta-inspector.php:50
+#: ../post-meta-inspector.php:107
 msgid "Value"
 msgstr ""
 
-#. Plugin URI of the plugin/theme
-msgid "http://wordpress.org/extend/plugins/post-meta-inspector/"
+#: ../post-meta-inspector.php:128
+msgid "Add new"
 msgstr ""
 
-#. Description of the plugin/theme
-msgid ""
-"Peer inside your post meta. Admins can view post meta for any post from a "
-"simple meta box."
-msgstr ""
-
-#. Author of the plugin/theme
-msgid "Daniel Bachhuber, Automattic"
-msgstr ""
-
-#. Author URI of the plugin/theme
-msgid "http://automattic.com/"
+#: ../post-meta-inspector.php:158
+msgid "Enter new value"
 msgstr ""
